tests/invalid/type_lhs_var.m
:- module type_lhs_var.
:- interface.

:- type foo == int.

:- type A == int.

:- type B ---> foo ; bar.
