tests/invalid/type_lhs_var.err_exp
type_lhs_var.m:006: On the left hand side of type definition: error: expected a
type_lhs_var.m:006:   type constructor and zero or more type variables as
type_lhs_var.m:006:   arguments, got `A'.
type_lhs_var.m:008: On the left hand side of type definition: error: expected a
type_lhs_var.m:008:   type constructor and zero or more type variables as
type_lhs_var.m:008:   arguments, got `B'.
